--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-icons": "^3.0.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.5",
     "normalize.css": "^8.0.1",
@@ -22,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
