--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-transition-group": "^4.4.11",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.5",
     "normalize.css": "^8.0.1",
@@ -26,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
