--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "craco-alias": "^3.0.1",
     "cross-env": "^7.0.3"
   }
